fix(styles) spacing on destination browse

--- a/projects/ngclient/src/app/backup/destination/single-destination/single-destination.component.scss
+++ b/projects/ngclient/src/app/backup/destination/single-destination/single-destination.component.scss
@@ -90,3 +90,7 @@ label {
     margin-right: 4px;
   }
 }
+
+.browse {
+  padding: p2r(4);
+}
